# objopa_bot

./: .env.example  .gitignore  AGENTS.md  Dockerfile.backend  Dockerfile.tg_bot  LICENSE  Makefile  README.md  activities.json  config.py  docker-compose.yml  main.py  patch_downloader.py  prepare_instaloader_session.sh  pyproject.toml  requirements.txt  test_page_embed.html  update_impersonate.py
2FA_landing/: index.html  minified.html
backend/: .gitignore  Dockerfile  config.py  main.py  requirements.txt
backend/models/: horoscope.py  markets.py  workers.py
backend/routers/: horoscope.py  markets.py  notify.py  worker.py
backend/tests/: conftest.py
core/: config.py  locks.py  logger.py  redis_client.py
landing/: index.html
routers/: __init__.py  blackjack.py  commands.py  crypto.py  day_tracker.py  gpt_router.py  mention_dice.py  utils.py
services/: alphavantage.py  binance.py  bybit_p2p.py  cbr.py  coinmarketcap.py  exchanges.py  gpt.py  gptchat_manager.py  horoscope_mail_ru.py  instagram_loader.py  mexc.py
tasks/: cbr_task.py  sheduled.py
tg_bot/: .gitignore  Dockerfile  config.py  gemma_test.py  main.py  prepare_instaloader_session.sh  redis_worker.py  requirements.txt
tg_bot/downloaders/: __init__.py  downloader_manager.py  downloader_types.py  gallery_dl.py  ig_reel_downloader.py  ig_reel_downloader.py_diff  instagram.py  spotify.py  twitter.py  ytdlp.py
tg_bot/redis_workers/: base_notifications.py  (+1 more)
workers/: animation_generation_pipeline.py  base_pipeline.py  base_worker.py  concat_generation_pipeline.py  delete_images_folder_pipeline.py  generator_factory.py  image_generation_pipeline.py  image_generation_worker.py  private_generators.py.example  queue_listener.py  reset_worker_state_pipeline.py  utils.py  video_generation_pipeline.py  worker_status_manager.py
(+39 files in other folders)
