[project]
name = "objopa-ecosystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiogram>=3.22.0",
    "colorama>=0.4.6",
    "curl-cffi>=0.13.0",
    "fastapi[standard]>=0.118.0",
    "gallery-dl>=1.30.8",
    "google-genai>=1.39.1",
    "httpx>=0.28.1",
    "instaloader>=4.14.2",
    "loguru>=0.7.3",
    "lxml>=6.0.2",
    "openai>=2.0.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "redis[hiredis]>=6.4.0",
    "sympy>=1.14.0",
    "telegramify-markdown>=0.5.1",
    "ujson>=5.11.0",
    "uvloop>=0.21.0 ; sys_platform == 'linux'",
    "websockets>=15.0.1",
    "wolframalpha>=5.1.3",
    "xxhash>=3.5.0",
    "yt-dlp>=2025.9.26",
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
strict_optional = true
check_untyped_defs = true
show_error_codes = true
pretty = true
exclude = '(^venv|^\.venv|^\.git|__pycache__)'

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]  # Разрешаем строки > 100 символов

[tool.pyright]
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
reportMissingTypeStubs = false
reportPrivateUsage = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
autoSearchPaths = true
exclude = [
    "**/__pycache__",
    ".venv",
    "venv",
    ".git"
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.2",
]
